--- a/about.html
+++ b/about.html
@@ -14,58 +14,57 @@
 </head>
 <body>
     <!-- Top Bar -->
-    <div class="top-bar">
-        <div class="container">
-            <div class="contact-info">
-                <span><i class="fas fa-phone"></i> (555) 123-4567</span>
-                <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
-                <span><i class="fas fa-map-marker-alt"></i> 123 Dental St, City, State</span>
-            </div>
-            <div class="social-links">
-                <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+    <header>
+        <div class="top-bar">
+            <div class="container">
+                <div class="contact-info">
+                    <span><i class="fas fa-phone"></i> (555) 123-4567</span>
+                    <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
+                </div>
+                <div class="social-links">
+                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                </div>
             </div>
         </div>
-    </div>
-
-    <!-- Main Header with Navigation -->
-    <div class="main-header">
-        <div class="container">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="images/logo.png" alt="Evergreen  Dental Clinic Logo">
-                </a>
+        <div class="main-header">
+            <div class="container">
+                
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="images/logo.png" alt="Evergreen Dental Clinic Logo">
+                    </a>
+                </div>
+                <nav>
+                    <button class="menu-toggle" aria-label="Toggle Menu">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </button>
+                    <ul class="main-menu">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li class="has-dropdown">
+                            <a href="services/">Services</a>
+                            <ul class="dropdown">
+                                <li><a href="services/general.html">General Dentistry</a></li>
+                                <li><a href="services/cosmetic.html">Cosmetic Dentistry</a></li>
+                                <li><a href="services/orthodontics.html">Orthodontics</a></li>
+                                <li><a href="services/emergency.html">Emergency Services</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="patient-resources.html">Patient Resources</a></li>
+                        <li><a href="testimonials.html">Testimonials</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="booking.html" class="btn btn-primary">Book Appointment</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <button class="menu-toggle" aria-label="Toggle Menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </button>
-                <ul class="main-menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="about.html">About Us</a></li>
-                    <li class="has-dropdown">
-                        <a href="services.html">Services</a>
-                        <ul class="dropdown">
-                            <li><a href="services/general.html">General Dentistry</a></li>
-                            <li><a href="services/cosmetic.html">Cosmetic Dentistry</a></li>
-                            <li><a href="services/orthodontics.html">Orthodontics</a></li>
-                            <li><a href="services/emergency.html">Emergency Services</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="patient-resources.html">Patient Resources</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="appointment.html" class="btn btn-primary">Book Appointment</a></li>
-                </ul>
-            </nav>
         </div>
-    </div>
+    </header>
 
     <!-- Page Header -->
     <header class="page-header">
@@ -260,7 +259,6 @@
         </div>
     </main>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-content">
