rregullova lidhjet me faqet

--- a/testimonials.html
+++ b/testimonials.html
@@ -50,7 +50,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li class="has-dropdown">
-                            <a href="services/">Services</a>
+                            <a href="services/general.html">Services</a>
                             <ul class="dropdown">
                                 <li><a href="services/general.html">General Dentistry</a></li>
                                 <li><a href="services/cosmetic.html">Cosmetic Dentistry</a></li>
