--- a/services/general.html
+++ b/services/general.html
@@ -32,7 +32,7 @@
                 
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo.png" alt="Evergreen Dental Clinic Logo">
+                        <img src="/images/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
