rregullova lidhjet me faqet

--- a/gallery.html
+++ b/gallery.html
@@ -402,11 +402,10 @@
                 <div class="footer-section">
                     <h3>Our Services</h3>
                     <ul class="footer-links">
-                        <li><a href="services.html#cleanings">Cleanings & Check-ups</a></li>
-                        <li><a href="services.html#whitening">Teeth Whitening</a></li>
-                        <li><a href="services.html#implants">Dental Implants</a></li>
-                        <li><a href="services.html#orthodontics">Orthodontics</a></li>
-                        <li><a href="services.html#emergency">Emergency Care</a></li>
+                        <li><a href="/services/cosmetic.html">Cosmetic</a></li>
+                        <li><a href="/services//emergency.html">Emergency</a></li>
+                        <li><a href="/services/general.html">General</a></li>
+                        <li><a href="/services/orthodontics.html">Orthondontics</a></li>
                     </ul>
                 </div>
                 
