--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/css/about.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="JavaScript" href="/js/mobile-togle.js">
 </head>
 <body>
     <!-- Top Bar -->
@@ -312,5 +311,6 @@
             </div>
         </div>
     </footer>
+    <script src="/js/mobile-togle.js"></script>
 </body>
 </html>
