--- a/services/emergency.html
+++ b/services/emergency.html
@@ -63,7 +63,6 @@
         </div>
     </header>
 
-    <!-- Emergency Hero Section -->
     <section class="emergency-hero">
         <div class="container">
             <div class="hero-content">
@@ -78,7 +77,6 @@
         </div>
     </section>
 
-    <!-- Emergency Info Section -->
     <section class="emergency-info">
         <div class="container">
             <div class="info-grid">
@@ -116,7 +114,6 @@
         </div>
     </section>
 
-    <!-- What to Do Section -->
     <section class="emergency-guide">
         <div class="container">
             <div class="section-header">
@@ -177,7 +174,6 @@
         </div>
     </section>
 
-    <!-- When to Call Section -->
     <section class="when-to-call">
         <div class="container">
             <div class="call-grid">
@@ -203,7 +199,6 @@
         </div>
     </section>
 
-    <!-- Peace of Mind Section -->
     <section class="peace-of-mind">
         <div class="container">
             <div class="peace-content">
@@ -229,7 +224,6 @@
         </div>
     </section>
 
-    <!-- Emergency CTA Section -->
     <section class="emergency-cta">
         <div class="container">
             <div class="cta-content">
@@ -246,8 +240,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Footer (same as other pages) -->
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -304,6 +296,6 @@
         </div>
     </footer>
 
-    <script src="../../js/scripts.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
