--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,6 @@
         </div>
     </header>
 
-    <!-- Blog Hero Section -->
     <section class="blog-hero">
         <div class="container">
             <h1>Dental Health Insights</h1>
@@ -70,11 +69,9 @@
         </div>
     </section>
 
-    <!-- Blog Content -->
     <section class="blog-content">
         <div class="container">
             <div class="blog-grid">
-                <!-- Blog Card 1 -->
                 <div class="blog-card">
                     <div class="blog-image">
                         <img src="/images/blog/checkup.jpg" alt="The Importance of Regular Dental Check-ups">
@@ -90,7 +87,6 @@
                     </div>
                 </div>
 
-                <!-- Blog Card 2 -->
                 <div class="blog-card">
                     <div class="blog-image">
                         <img src="/images/blog/white.jpg" alt="Modern Teeth Whitening Techniques">
@@ -106,7 +102,6 @@
                     </div>
                 </div>
 
-                <!-- Blog Card 3 -->
                 <div class="blog-card">
                     <div class="blog-image">
                         <img src="/images/blog/kids.jpg" alt="Childhood Dental Care Tips">
@@ -122,7 +117,6 @@
                     </div>
                 </div>
 
-                <!-- Blog Card 4 -->
                 <div class="blog-card">
                     <div class="blog-image">
                         <img src="/images/blog/implants.jpg" alt="Understanding Dental Implants">
@@ -138,7 +132,6 @@
                     </div>
                 </div>
 
-                <!-- Blog Card 5 -->
                 <div class="blog-card">
                     <div class="blog-image">
                         <img src="images/blog/food.jpg" alt="Foods for Healthy Teeth">
@@ -154,7 +147,7 @@
                     </div>
                 </div>
 
-                <!-- Blog Card 6 -->
+
                 <div class="blog-card">
                     <div class="blog-image">
                         <img src="images/blog/anxiety.jpg" alt="Managing Dental Anxiety">
@@ -171,7 +164,6 @@
                 </div>
             </div>
 
-            <!-- Pagination -->
             <div class="pagination">
                 <a href="#" class="pagination-item pagination-active">1</a>
                 <a href="#" class="pagination-item">2</a>
@@ -182,7 +174,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -237,5 +228,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/mobile-togle.js"></script>
 </body>
 </html>
