--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,6 @@
         </div>
     </header>
 
-    <!-- Contact Hero Section -->
     <section class="contact-hero">
         <div class="container">
             <div class="hero-content">
@@ -72,11 +71,9 @@
         </div>
     </section>
 
-    <!-- Contact Main Section -->
     <section class="contact-main">
         <div class="container">
             <div class="contact-grid">
-                <!-- Contact Form -->
                 <div class="contact-form">
                     <h2>Send Us a Message</h2>
                     <form id="contactForm">
@@ -117,7 +114,6 @@
                     </form>
                 </div>
 
-                <!-- Contact Info -->
                 <div class="contact-info">
                     <h2>Contact Information</h2>
                     <div class="info-card">
@@ -177,7 +173,6 @@
         </div>
     </section>
 
-    <!-- Map Section -->
     <section class="map-section">
         <div class="container">
             <div class="map-container">
@@ -246,6 +241,6 @@
         </div>
     </footer>
 
-    <script src="../js/scripts.js"></script>
+    <script src="js/mobile-togle.js"></script>
 </body>
 </html>
