--- a/index.html
+++ b/index.html
@@ -328,6 +328,6 @@
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- Main JavaScript -->
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
