add images, html files and css files

--- a/services/cosmetic.html
+++ b/services/cosmetic.html
@@ -182,7 +182,7 @@
                     <div class="tab-pane" id="bonding">
                         <div class="tab-content-wrapper">
                             <div class="tab-image">
-                                <img src="../../images/services/bonding.jpg" alt="Dental Bonding">
+                                <img src="/images/cosmetic/bonding.jpg" alt="Dental Bonding">
                             </div>
                             <div class="tab-details">
                                 <h3>Dental Bonding</h3>
