--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo.png" alt="Evergreen Dental Clinic Logo">
+                        <img src="images/general/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="services-grid">
                     <div class="service-card">
-                        <div class="service-image" style="background-image: url('/images/general.jpg');"></div>
+                        <div class="service-image" style="background-image: url('/images/general/general.jpg');"></div>
                         <div class="service-content">
                             <h3>General Dentistry</h3>
                             <p>Preventive care and treatments to maintain optimal oral health for the whole family.</p>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="service-card">
-                        <div class="service-image" style="background-image: url('/images/Cosmetic.jpg');"></div>
+                        <div class="service-image" style="background-image: url('/images/general/Cosmetic.jpg');"></div>
                         <div class="service-content">
                             <h3>Cosmetic Dentistry</h3>
                             <p>Enhance your smile with our range of aesthetic treatments and procedures.</p>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="service-card">
-                        <div class="service-image" style="background-image: url('/images/orthodontics.jpg');"></div>
+                        <div class="service-image" style="background-image: url('/images/general/orthodontics.jpg');"></div>
                         <div class="service-content">
                             <h3>Orthodontics</h3>
                             <p>Modern solutions for straightening teeth and achieving proper bite alignment.</p>
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                     <div class="service-card">
-                        <div class="service-image" style="background-image: url('/images/emergency.jpg');"></div>
+                        <div class="service-image" style="background-image: url('/images/general/emergency.jpg');"></div>
                         <div class="service-content">
                             <h3>Emergency Care</h3>
                             <p>Immediate attention for dental emergencies to relieve pain and save teeth.</p>
@@ -177,7 +177,7 @@
                         </div>
                         <div class="testimonial-author">
                             <div class="author-avatar">
-                                <img src="images/sarahJ.jpg" alt="Sarah Johnson">
+                                <img src="images/general/sarahJ.jpg" alt="Sarah Johnson">
                             </div>
                             <div class="author-info">
                                 <h4>Sarah Johnson</h4>
@@ -198,7 +198,7 @@
                         </div>
                         <div class="testimonial-author">
                             <div class="author-avatar">
-                                <img src="images/michaelC.jpg" alt="Michael Chen">
+                                <img src="images/general/michaelC.jpg" alt="Michael Chen">
                             </div>
                             <div class="author-info">
                                 <h4>Michael Chen</h4>
@@ -242,7 +242,7 @@
                 <div class="blog-grid">
                     <article class="blog-card">
                         <div class="blog-image">
-                            <img src="images/oralhygeine.jpg" alt="Oral Health Tips">
+                            <img src="images/general/oralhygeine.jpg" alt="Oral Health Tips">
                         </div>
                         <div class="blog-content">
                             <h3><a href="blog.html">5 Essential Oral Health Tips for Busy People</a></h3>
@@ -253,7 +253,7 @@
                     </article>
                     <article class="blog-card">
                         <div class="blog-image">
-                            <img src="images/invisalign.jpg" alt="Invisalign Guide">
+                            <img src="images/general/invisalign.jpg" alt="Invisalign Guide">
                         </div>
                         <div class="blog-content">
                             <h3><a href="blog.html">The Complete Guide to Invisalign Treatment</a></h3>
