--- a/patient-resources.html
+++ b/patient-resources.html
@@ -31,7 +31,7 @@
                 
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo.png" alt="Evergreen Dental Clinic Logo">
+                        <img src="images/general/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
