--- a/testimonials.html
+++ b/testimonials.html
@@ -34,7 +34,7 @@
                 
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo.png" alt="Evergreen Dental Clinic Logo">
+                        <img src="images/general/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
