--- a/services/general.html
+++ b/services/general.html
@@ -30,7 +30,7 @@
                 
                 <div class="logo">
                     <a href="index.html">
-                        <img src="/images/logo.png" alt="Evergreen Dental Clinic Logo">
+                        <img src="/images/general/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
@@ -104,7 +104,7 @@
                     <a href="../../booking.html" class="btn btn-primary">Schedule Your Checkup</a>
                 </div>
                 <div class="service-intro-image">
-                    <img src="/images/general.jpg" alt="General Dentistry at Evergreen">
+                    <img src="/images/general/general.jpg" alt="General Dentistry at Evergreen">
                 </div>
             </div>
         </div>
