--- a/services/orthodontics.html
+++ b/services/orthodontics.html
@@ -30,7 +30,7 @@
                 
                 <div class="logo">
                     <a href="index.html">
-                        <img src="/images/logo.png" alt="Evergreen Dental Clinic Logo">
+                        <img src="/images/general/logo.pnggi" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
