--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
         <div class="top-bar">
             <div class="container">
                 <div class="contact-info">
-                    <span><i class="fas fa-phone"></i> (555) 123-4567</span>
+                    <span><i class="fas fa-phone"></i> (355) 600000000</span>
                     <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                 </div>
                 <div class="social-links">
@@ -43,7 +43,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li class="has-dropdown">
-                            <a href="services/cosmetic.html">Services</a>
+                            <a href="services/general.html">Services</a>
                             <ul class="dropdown">
                                 <li><a href="services/general.html">General Dentistry</a></li>
                                 <li><a href="services/cosmetic.html">Cosmetic Dentistry</a></li>
