--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="top-bar">
             <div class="container">
                 <div class="contact-info">
-                    <span><i class="fas fa-phone"></i> (555) 123-4567</span>
+                    <span><i class="fas fa-phone"></i> (355) 600000000</span>
                     <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                 </div>
                 <div class="social-links">
