--- a/services/general.html
+++ b/services/general.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/general.css">
     <link rel="stylesheet" href="css/service.css">
+    <link rel="stylesheet" href="../css/responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -15,7 +16,7 @@
         <div class="top-bar">
             <div class="container">
                 <div class="contact-info">
-                    <span><i class="fas fa-phone"></i> (555) 123-4567</span>
+                    <span><i class="fas fa-phone"></i> (355) 600000000</span>
                     <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                 </div>
                 <div class="social-links">
@@ -30,7 +31,7 @@
                 
                 <div class="logo">
                     <a href="index.html">
-                        <img src="/images/general/logo.png" alt="Evergreen Dental Clinic Logo">
+                        <img src="../images/general/logo.png" alt="Evergreen Dental Clinic Logo">
                     </a>
                 </div>
                 <nav>
@@ -40,23 +41,23 @@
                         <span class="bar"></span>
                     </button>
                     <ul class="main-menu">
-                        <li><a href="../../index.html">Home</a></li>
-                        <li><a href="../../about.html">About Us</a></li>
-                        <li class="has-dropdown active">
-                            <a href="../">Services</a>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../about.html">About Us</a></li>
+                        <li class="has-dropdown">
+                            <a href="services/general.html">Services</a>
                             <ul class="dropdown">
-                                <li><a href="general.html" class="active">General Dentistry</a></li>
+                                <li><a href="general.html">General Dentistry</a></li>
                                 <li><a href="cosmetic.html">Cosmetic Dentistry</a></li>
                                 <li><a href="orthodontics.html">Orthodontics</a></li>
                                 <li><a href="emergency.html">Emergency Services</a></li>
                             </ul>
                         </li>
-                        <li><a href="../../patient-resources.html">Patient Resources</a></li>
-                        <li><a href="../../testimonials.html">Testimonials</a></li>
-                        <li><a href="../../gallery.html">Gallery</a></li>
-                        <li><a href="../../blog.html">Blog</a></li>
-                        <li><a href="../../contact.html">Contact</a></li>
-                        <li><a href="../../booking.html" class="btn btn-primary">Book Appointment</a></li>
+                        <li><a href="../patient-resources.html">Patient Resources</a></li>
+                        <li><a href="../testimonials.html">Testimonials</a></li>
+                        <li><a href="../gallery.html">Gallery</a></li>
+                        <li><a href="../blog.html">Blog</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
+                        <li><a href="../booking.html" class="btn btn-primary">Book Appointment</a></li>
                     </ul>
                 </nav>
             </div>
