--- a/testimonials.html
+++ b/testimonials.html
@@ -7,6 +7,7 @@
     <title>Gallery | Evergreen Dental Clinic</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/testimonial.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
    
@@ -19,7 +20,7 @@
         <div class="top-bar">
             <div class="container">
                 <div class="contact-info">
-                    <span><i class="fas fa-phone"></i> (555) 123-4567</span>
+                    <span><i class="fas fa-phone"></i> (355) 600000000</span>
                     <span><i class="fas fa-envelope"></i> info@evergreen.com</span>
                 </div>
                 <div class="social-links">
