--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1>Your Brightest Smile Starts Here</h1>
+                    <h1>Where Your Smile Blossoms</h1>
                     <p>Comprehensive dental care in a comfortable, modern environment</p>
                     <div class="hero-buttons">
                         <a href="booking.html" class="btn btn-primary">Book Appointment</a>
@@ -177,10 +177,10 @@
                         </div>
                         <div class="testimonial-author">
                             <div class="author-avatar">
-                                <img src="images/general/sarahJ.jpg" alt="Sarah Johnson">
+                                <img src="images/general/sara.jpg" alt="Sara Nikaj">
                             </div>
                             <div class="author-info">
-                                <h4>Sarah Johnson</h4>
+                                <h4>Sara Nikaj</h4>
                                 <p>Teeth Whitening Patient</p>
                             </div>
                         </div>
@@ -198,10 +198,10 @@
                         </div>
                         <div class="testimonial-author">
                             <div class="author-avatar">
-                                <img src="images/general/michaelC.jpg" alt="Michael Chen">
+                                <img src="images/general/andi.jpg" alt="Andi Hoxha">
                             </div>
                             <div class="author-info">
-                                <h4>Michael Chen</h4>
+                                <h4>Andi Hoxha</h4>
                                 <p>Dental Implant Patient</p>
                             </div>
                         </div>
