--- a/services/cosmetic.html
+++ b/services/cosmetic.html
@@ -324,7 +324,7 @@
             <div class="testimonial-cards">
                 <div class="testimonial-card">
                     <div class="testimonial-image">
-                        <img src="../../images/sarahJ.jpg" alt="Sarah Johnson">
+                        <img src="/images/general/sara.jpg" alt="Sarah Nikaj">
                     </div>
                     <div class="testimonial-content">
                         <div class="testimonial-rating">
@@ -338,7 +338,7 @@
                             <p>"I've always been self-conscious about my smile, but after getting veneers at Evergreen , I can't stop smiling! The team made me feel comfortable throughout the entire process, and the results exceeded my expectations."</p>
                         </div>
                         <div class="testimonial-author">
-                            <h4>Sarah Johnson</h4>
+                            <h4>Sara Nikaj</h4>
                             <p>Porcelain Veneers</p>
                         </div>
                     </div>
@@ -346,7 +346,7 @@
                 
                 <div class="testimonial-card">
                     <div class="testimonial-image">
-                        <img src="../../images/michaelC.jpg" alt="Michael Chen">
+                        <img src="/images/general/andi.jpg" alt="Andi Hoxha">
                     </div>
                     <div class="testimonial-content">
                         <div class="testimonial-rating">
