--- a/testimonials.html
+++ b/testimonials.html
@@ -179,7 +179,7 @@
         <div class="call-to-action">
             <h3>Ready to Experience Our Care?</h3>
             <p>Join our community of satisfied patients and discover why so many people trust Evergreen  Dental with their oral health. Schedule your appointment today and see the difference for yourself.</p>
-            <a href="appointment.html" class="btn">Book Your Appointment</a>
+            <a href="booking.html" class="btn">Book Your Appointment</a>
         </div>
     </div>
 
