--- a/patient-resources.html
+++ b/patient-resources.html
@@ -272,6 +272,8 @@
         </div>
     </footer>
 
+    <script src="js/mobile-togle.js"></script>
+
     <script src="js/faq.js"></script>
 </body>
 </html>
