--- a/services/cosmetic.html
+++ b/services/cosmetic.html
@@ -496,5 +496,7 @@
 
     <script src="../../js/main.js"></script>
     <script src="../js/cosemtic.js"></script>
+
+    <script src="..js/mobile-togle.js"></script>
 </body>
 </html>
