--- a/services/emergency.html
+++ b/services/emergency.html
@@ -6,7 +6,7 @@
     <title>Emergency Dental Services | Your Dental Practice</title>
     <link rel="stylesheet" href="/css/emergency.css">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -298,5 +298,7 @@
     </footer>
 
     <script src="../js/main.js"></script>
+
+    <script src="..js/mobile-togle.js"></script>
 </body>
 </html>
