--- a/services/general.html
+++ b/services/general.html
@@ -349,5 +349,7 @@
 
     <script src="../js/main.js"></script>
     <script src="../js/general.js"></script>
+
+    <script src="..js/mobile-togle.js"></script>
 </body>
 </html>
