--- a/services/orthodontics.html
+++ b/services/orthodontics.html
@@ -266,5 +266,7 @@
     </footer>
 
     <script src="../../js/scripts.js"></script>
+
+    <script src="..js/mobile-togle.js"></script>
 </body>
 </html>
