--- a/testimonials.html
+++ b/testimonials.html
@@ -247,6 +247,7 @@
             </div>
         </div>
     </footer>
-           
+     
+    <script src="js/mobile-togle.js"></script>      
 </body>
 </html>
